Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68076

[REG 5.10 -> 5.11] Keyboard focus issues

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.1
    • 5.11.0 Beta 4
    • WebEngine
    • None

      After https://codereview.qt-project.org/#/c/221408/ (cc juri.valdmann) I'm seeing some issues with keyboard focus not going to the page when it should.

      I'm seeing it in various scenarios, here's one way to reproduce it:

      With this simple code:

      #include <QApplication>
      #include <QWebEngineView>
      #include <QUrl>
      
      int main(int argc, char *argv[])
      {
          QApplication app(argc, argv);
          QWebEngineView view;
          view.load(QUrl(argv[1]));
          view.show();
          return app.exec();
      }
      
      QT += core widgets webenginewidgets
      
      TARGET = testbrowser
      TEMPLATE = app
      
      SOURCES += main.cpp
      

      When doing ./testbrowser https://ddg.gg, I see the keyboard focus on the search field (blinking cursor), but the keyboard input goes nowhere.

      Some observations:

      • With simplebrowser, the keyboard focus doesn't show up on that input at all.
      • When setting FocusOnNavigationEnabled it doesn't happen (but that has other drawbacks).
      • Before that change, it doesn't happen.
      • When loading https://duckduckgo.com/ directly, it doesn't seem to happen.

      I'm seeing it in other situations as well, but this is probably the easiest one to reproduce.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            juri.valdmann Jüri Valdmann (Inactive)
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes