Fix keyboard focus for speculative RenderFrameHosts

When encountering a 301 redirect, one render frame/widget is created for the
original URL plus one "speculative" render frame/widget for the new URL. Once
the speculative frame commits, keyboard focus should switch to the corresponding
widget. This doesn't work however, because QQuickItem::forceActiveFocus doesn't
give focus to the containing QQuickWidget. Fixed by using QWidget::setFocus.

Also changed simplebrowser to focus the QWebEngineView on startup.

Task-number: QTBUG-68076
Change-Id: I8dc42ba89bfdcd46a86c7dca357fdf1e94f439d4
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>