src/webenginewidgets/render_widget_host_view_qt_delegate_widget.cpp
@@ -253,6 +253,7 @@ void RenderWidgetHostViewQtDelegateWidget::setKeyboardFocus()
         QGuiApplication::sync();
 
     m_rootItem->forceActiveFocus();
+    setFocus();
 }
 
 bool RenderWidgetHostViewQtDelegateWidget::hasKeyboardFocus()
